Fix the dataTable width, the rightmost column will not be cut off by y-scrollbar now

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -327,7 +327,7 @@ th.sticky-header {
 #dataTable th {
     vertical-align: middle;
 		/* Fix the hidden th left/right border in firebox */
-		background-clip: padding-box
+		background-clip: padding-box;
 }
 
 #dataTable th a {
